apps/app01/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app01
  labels:
    app.kubernetes.io/name: app01
    app.kubernetes.io/component: application
