apps/app01/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: app01
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/component: application
    spec:
      automountServiceAccountToken: false
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          livenessProbe:
            httpGet:
              path: /get
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /get
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi

      volumes:
        - name: tmp
          emptyDir: {}

      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: 'kubernetes.io/hostname'
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: httpbin
