apps/app01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: app01
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: httpbin
