apps/app01/gw-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app01
  namespace: app01
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: app01
spec:
  hostnames:
    - 'app01.localhost'
    - '127.0.0.1'
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      port: 80
    - name: envoy-gateway
      namespace: envoy-gateway-system
      port: 443
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin
          port: 80
          weight: 100
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
